# Data-Archive-Graph

./: .gitignore  README.md  pyproject.toml  todo.md
.history/: .gitignore_20260102210202  .gitignore_20260102210214  DAE-Features_20251229205610.md  README_20250408073012.md  README_20250409051407.md  README_20250410071816.md  README_20251231101950.md  main_20260102185909.py  main_20260102191749.py  main_20260102191812.py  main_20260102192423.py  merge_20251225183228.py  merged_natural_language_20251225183346.md  pyproject_20250412152911.toml  pyproject_20250412154439.toml  pyproject_20250417070238.toml  pyproject_20250417070554.toml  pyproject_20250417071025.toml  pyproject_20260102190147.toml  pyproject_20260102190335.toml  pyproject_20260102190647.toml  pyproject_20260102190724.toml  pyproject_20260102190908.toml  pyproject_20260102191734.toml  pyproject_20260102192155.toml  pyproject_20260102192221.toml  setup_20250417065606.py  todo_20251230205358.md  todo_20251230205415.md  todo_20251230210043.md  todo_20251230212109.md  todo_20251230212126.md  todo_20251230212952.md  todo_20251230214431.md  todo_20251230215039.md  todo_20260102170724.md
0-full-DA-analysis/: DA-Full-Analysis.ipynb  note_structural_metrics.csv
data/: 0-categories_snapshot.json  1-categories_snapshot_linked.json  3-LDA_vault_index.ipynb  metrics_graph.csv  metrics_structural.csv
docs/: Data-Archive-Explorer-PLAN.md  about.md  context.md  explorations_notes.md  features.md  graphing.md  layout.md  progress-blog-posts.md  repo-layout.md  repo-running.md
explorations/: TFIDF_vault_index.ipynb  build_vault_index.ipynb  explore_vault_index.ipynb  graph.ipynb  semantic_graph.ipynb  vault_index copy.json  vault_index.json
notebooks/: cytoscape.ipynb
restart/: DAE-Features.md  manual-polling.py
src/: cytoscape_visualizer.py  (+9 more)
(+107 files in other folders)
