[project]
name = "data-archive-graph"
version = "0.1.0"
description = "Graph analysis of the data archive"
authors = [
    {name = "Rhys Wells",email = "rhyslwells@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "networkx (>=3.4.2,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "markdown (>=3.7,<4.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "kneed (>=0.8.5,<0.9.0)",
    "python-louvain (>=0.16,<0.17)",
    "pydot (>=3.0.4,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "dash-cytoscape (==0.2.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
